# jdt

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  typeshare.toml
.github/workflows/: check-and-lint.yaml  test.yaml
crypto/: Cargo.toml
crypto/src/: lib.rs
encoding/: Cargo.toml
encoding/src/: lib.rs
image-repo/: Cargo.toml
image-repo/examples/: cli.rs  example_repo.json
image-repo/src/: lib.rs  types.rs
localstorage/: Cargo.toml
localstorage/src/: error.rs  lib.rs  types.rs
repogen/: Cargo.toml
repogen/src/: main.rs
src/: App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  main.rs
src/components/AddRepoModal/: AddRepoModal.tsx
src/hooks/: useToast.tsx
viewmodel-api/: Cargo.toml
viewmodel-api/src/: error.rs  lib.rs  types.rs  viewmodels.rs
wallpaper-bindings/: Cargo.toml
wallpaper-bindings/src/: lib.rs  main.rs  tauri_bridge.rs
