[workspace]
members = ["./image-repo", "./repogen", "./viewmodel-api", "./encoding"]
exclude = ["./src-tauri"]

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1", features = ["fs"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
specta = "1"
