[package]
name = "image-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
decoding = ["dep:image", "dep:imghdr"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2", features = ["serde"] }
image = { version = "0.24", optional = true }
imghdr = { version = "0.7", optional = true }
encoding = { path = "../encoding" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
