[package]
name = "image-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
decoding = ["dep:image", "dep:imghdr"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
image = { version = "0.24", optional = true }
imghdr = { version = "0.7", optional = true }
encoding = { path = "../encoding" }

[dev-dependencies]
tokio = { workspace = true }
