[package]
name = "repogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = { version = "2", features = ["serde"] }
image-repo = { path = "../image-repo", features = ["decoding"] }
colored_json = "4"
