[package]
name = "repogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
image-repo = { path = "../image-repo", features = ["decoding"] }
colored_json = "4"
