[package]
name = "jdt"
version = "0.0.0"
description = "A Tauri App"
authors = ["Mat Jones", "Robert Jones"]
license = "MIT"
repository = "https://github.com/mrjones2014/jdt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
viewmodel-api = { path = "../viewmodel-api" }
url = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
specta = "=2.0.0-rc.6"
tauri-specta = { version = "=2.0.0-rc.3", features = ["typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
