[package]
name = "viewmodel-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image-repo = { path = "../image-repo" }
dirs-next = "2"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1", features = ["fs"] }
chrono = "0.4"
typeshare = "1"
