[package]
name = "viewmodel-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image-repo = { path = "../image-repo" }
dirs-next = "2"
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono = "0.4"
typeshare = "1"
strum = { version = "0.25", features = ["derive"] }
reqwest = { workspace = true }
